--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,13 @@
 }
 
 .modal {
-  opacity: 0.7;
+  opacity: 0.9;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgb(0, 0, 0, 0);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,10 +20,10 @@
 .kali-terminal {
   width: 80%;
   max-width: 600px;
-  background-color: #2c2c2c; /* Dark background */
+  background-color: #000000; /* Dark background */
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
-  color: #fcadad; /* Green text */
+  box-shadow: 0 0 10px rgba(0, 0, 0);
+  color: #06eeff; /* Green text */
   padding: 20px;
   font-family: 'Courier New', Courier, monospace;
 }
@@ -36,7 +36,7 @@
 .terminal-header button {
   background: none;
   border: none;
-  color: #ffaabd; /* Green text */
+  color: #00e1ff; /* Green text */
   font-size: 1.2rem;
   cursor: pointer;
 }
@@ -44,4 +44,18 @@
 .terminal-body {
   white-space: pre;
   /* Additional styling */
+}
+
+.terminal-icon {
+  opacity: 0.7;
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  cursor: pointer;
+  /* Additional styling for the icon */
+}
+
+.terminal-icon img {
+  width: 50px; /* Or your preferred size */
+  height: auto;
 }
