--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -10,8 +10,21 @@
     height: 100%;
     z-index: -1;
   }
+
+  .torIcon {
+    opacity: 0.7;
+    position: fixed;
+    top: 60px; 
+    left: 40px; 
+    cursor: pointer;
+}
+
+.torIcon img {
+    width: 80px; 
+    height: auto;
+}
   
-  /* Styles for TerminalModal and TerminalIcon */
+ 
   .modal { 
     opacity: 0.9;
     position: fixed;
@@ -54,17 +67,16 @@
     white-space: pre;
   }
   
-  .terminalIcon {
+  .kaliIcon {
     opacity: 0.7;
     position: fixed;
-    bottom: 20px;
-    left: 20px;
+    top: 180px;
+    left: 40px;
     cursor: pointer;
   }
 
-  .terminalIcon img {
-    width: 50px; 
+  .kaliIcon img {
+    width: 80px; 
     height: auto;
   }
   
- 
